# lib_audio_dsp

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  CONTRIBUTING.rst  Jenkinsfile  README.rst  gen_sine.py  gen_wn.py  index.rst  readme.rst  requirements-format.txt  requirements.txt  settings.yml
.xtag/: uhubctl_map
doc/: .gitignore  Doxyfile.inc  autogen.py  build_docs.sh  exclude-patterns.inc  exclude_patterns.inc  gen_control.py  index.rst  lib_audio_dsp.rst  substitutions.inc
doc/00_intro_outro/: intro.rst  outro.rst
doc/00_lib_audio_dsp_intro/: index.rst
doc/01_tool_user_guide/: index.rst  pipeline_design.rst  setup.rst  using_the_tool.rst
doc/02_design_guide/: design_guide.rst  index.rst
doc/03_dsp_components/: index.rst  latency.rst  modules.rst
doc/04_run_time_control_guide/: control_helper.rst  control_interface_walkthrough.rst  index.rst
doc/05_api_reference/: index.rst  pipeline_design.rst
doc/design_guide/: index.rst
doc/dsp_components/: index.rst
doc/programming_guide/: available_dsp_stages.rst  c_control_api.rst  dsp.rst  index.rst  introduction.rst  list_of_stages.rst  pipeline_design.rst  pipeline_design_tutorial.rst  python_stages.rst
doc/rst/: lib_audio_dsp.rst
doc/run_time_control_guide/: control_helper.rst  control_interface_walkthrough.rst  index.rst
doc/tool_user_guide/: index.rst  pipeline_design.rst  setup.rst  using_the_tool.rst
examples/app_fd_block_fir/: CMakeLists.txt  readme.md
examples/app_simple_audio_dsp_integration/: CMakeLists.txt  README.rst  dsp_design.ipynb  readme.md  readme.rst
examples/app_td_block_fir/: CMakeLists.txt  readme.md
examples/app_v2/: CMakeLists.txt  dsp.yaml  main.py
host/: CMakeLists.txt  README.rst
host/dsp_control/: dsp_control.cmake
host/dsp_host/: CMakeLists.txt  README.rst  dsp_control.cmake
host/host_cmd_map/: CMakeLists.txt  command_map.cpp
host/src/: host_application.cmake  host_drivers.cmake  main.cpp
lib_audio_dsp/: lib_build_info.cmake
lib_audio_dsp/api/: biquad.h
lib_audio_dsp/src/: biquad.S
python/: Makefile  graph_schema.json  pyproject.toml  setup.py
python/audio_dsp/: __init__.py  biquad.py  cascade_biquads.py
python/audio_dsp/design/: __init__.py  _draw.py  build_utils.py  composite_stage.py  graph.py  host_app.py  parse_config.py  parse_json.py  pipeline.py  pipeline_executor.py  plot.py  stage.py  thread.py
python/audio_dsp/design/templates/: cmd_num_values.mako  cmd_offsets_h.mako  cmds_h.mako  gen_command_map_offsets_c.mako  host_cmd_map.mako  py_stage_doc.mako  struct_def_h.mako
python/audio_dsp/dsp/: __init__.py  biquad.py  cascade_biquads.py  cascaded_biquads.py  drc.py  fd_block_fir.py  filters.py  fir.py  generic.py  graphic_eq.py  out.txt  ref_fir.py  reverb.py  reverb_base.py  reverb_plate.py  reverb_stereo.py  signal_chain.py  signal_gen.py  td_block_fir.py  types.py  utils.py
python/audio_dsp/dsp/drc/: __init__.py  drc.py  drc_utils.py  expander.py  sidechain.py  stereo_compressor_limiter.py
python/audio_dsp/models/: __init__.py  biquad.py  biquad_model.py  biquad_types.py  cascaded_biquads.py  compressor.py  compressor_model.py  compressor_sidechain.py  compressor_sidechain_model.py  delay_model.py  envelope_detector.py  fields.py  fir.py  graphic_eq.py  limiter.py  limiter_model.py  noise_gate.py  noise_gate_model.py  noise_suppressor_expander.py  noise_suppressor_expander_model.py  reverb.py  signal_chain.py  stage.py
python/audio_dsp/stages/: __init__.py  agc.py  biquad.py  biquad_module.py  cascaded_biquads.py  compressor.py  compressor_sidechain.py  delay.py  envelope_detector.py  expander.py  fir.py  graphic_eq.py  limiter.py  noise_gate.py  noise_suppressor.py  noise_suppressor_expander.py  parametric_eq.py  reverb.py  signal_chain.py
python/audio_dsp/tests/: test_cascaded_biquads_pipeline.py  test_delay_pipeline.py  test_envelope_detector_pipeline.py  test_fir_pipeline.py  test_reverb_pipeline.py
python/audio_dsp/tuning/: __init__.py
python/audio_dsp/tuning/transport/: __init__.py  xscope.py  xscope_endpoint.py
python/audio_dsp/v2/: builtin_stages.yaml  code_gen.py  dot.py  edges.py  ir.py  optimise.py  stages.py
python/audio_dsp/v2/code_gen/: dsp_generated.mako
python/audio_dsp/v2/types/: __init__.py  stage_helpers.py
stage_config/: adder.yaml  biquad.yaml  biquad_slew.yaml  blend.yaml  blend_stereo.yaml  bypass.yaml  cascaded_biquads.yaml  cascaded_biquads_16.yaml  clipper.yaml  compressor_rms.yaml  compressor_sidechain.yaml  compressor_sidechain_stereo.yaml  crossfader.yaml  crossfader_stereo.yaml  delay.yaml  dsp_thread.yaml  envelope_detector_peak.yaml  envelope_detector_rms.yaml  expander.yaml  fir_direct.yaml  fixed_gain.yaml  fork.yaml  graphic_eq_10b.yaml  hard_limiter_peak.yaml  limiter_peak.yaml  limiter_rms.yaml  mixer.yaml  noise_gate.yaml  noise_suppressor.yaml  noise_suppressor_expander.yaml  pipeline.yaml  reverb.yaml  reverb_plate_stereo.yaml  reverb_room.yaml  reverb_room_stereo.yaml  router_4to1.yaml  subtractor.yaml  sum.yaml  switch.yaml  switch_slew.yaml  (+2 more)
test/: pytest.ini  test_utils.py
test/biquad/: CMakeLists.txt  README.rst  test_biquad_c.py  test_biquad_converters_c.py  test_biquad_python.py  test_biquad_slew_c.py
test/cascaded_biquads/: CMakeLists.txt  test_casc_biquads_c.py  test_cascaded_biquads_c.py  test_cascaded_biquads_python.py
test/drc/: CMakeLists.txt  test_drc_c.py  test_drc_mch_c.py  test_drc_python.py
test/fd_block_fir/: CMakeLists.txt  readme.md  ref_fir.py  test_fd_block_fir.py
test/fir/: CMakeLists.txt  conftest.py  test_block_fir_python.py  test_fir_c.py  test_fir_python.py
test/frequency_domain/: CMakeLists.txt  frequency_domain_pipeline.c  frequency_domain_pipeline.h  main.c
test/graphic_eq/: CMakeLists.txt  test_graphic_eq_c.py  test_graphic_eq_python.py
test/host/: command_map_dummy.cpp  device_dummy.cpp  parse_control_ret_t.py  test_control_ret_str_map.py  test_dummy_commands.py  test_utils.py
test/json/: test_biquad_pipeline.py  test_cascaded_biquads_pipeline.py  (+9 more)
tools/: requirements-format.in  requirements.in  update-requirements.py
(+485 files in other folders)
