[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "audio_dsp"
version = "0.2.0"
description = "An audio DSP library for the xcore"
authors = [
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "soundfile",
    "IPyWidgets",
    "graphviz",
    "IPython",
    "ipympl",
    "pyyaml",
    "mako",
    "tabulate",
    "docstring-inheritance"
]

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["D"]
ignore = [
    "D404", # First word of docstring must not be "This".
    "D205", # Requires blank line after first line of a doc string (specified by PEP 257).
]
fixable = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"audio_dsp/dsp/*.py" = ["D"]  # Disable doc checks for dsp module as they are not done yet.
